--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-nav ul li{
-  font-size: 18px;
-  padding: 0px 1rem;
+body{
+  background-color: rgb(0, 221, 255);
+  height: 100vh;
 }
 
 nav{
   border: 1px solid red;
+  background-color: white;
 }
